data loader + model instruction addded

--- a/trails.ipynb
+++ b/trails.ipynb
@@ -20,6 +20,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY = 'e57588d3-6eb3-4dcb-8174-5508eba4fc14'\n",
+    "PINECONE_API_ENV = 'us-east-1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extracting the PDF data\n",
+    "def load_data(data):\n",
+    "    loader = DirectoryLoader(\n",
+    "        data,\n",
+    "        glob='*.pdf',\n",
+    "        loader_cls=PyMuPDFLoader\n",
+    "    )\n",
+    "    documents = loader.load()\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
