EMbedding store into Pinecode vector DB

--- a/trails.ipynb
+++ b/trails.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Administrator\\anaconda3\\envs\\mchatbot\\lib\\site-packages\\pinecone\\data\\index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain import PromptTemplate\n",
     "from langchain.chains import RetrievalQA\n",
@@ -20,12 +29,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load environment variables from .env file\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extracting the PDF data\n",
+    "def load_pdf(data):\n",
+    "    loader = DirectoryLoader(\n",
+    "        data,\n",
+    "        glob='*.pdf',\n",
+    "        loader_cls=PyMuPDFLoader\n",
+    "    )\n",
+    "    documents = loader.load()\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = 'e57588d3-6eb3-4dcb-8174-5508eba4fc14'\n",
-    "PINECONE_API_ENV = 'us-east-1'"
+    "extracted_data = load_pdf('data/') # here we can also extract multiple file/documents"
    ]
   },
   {
@@ -34,15 +81,292 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extracting the PDF data\n",
-    "def load_data(data):\n",
-    "    loader = DirectoryLoader(\n",
-    "        data,\n",
-    "        glob='*.pdf',\n",
-    "        loader_cls=PyMuPDFLoader\n",
-    "    )\n",
-    "    documents = loader.load()\n",
-    "    return documents"
+    "#extracted_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create text chunks for the large document\n",
+    "\n",
+    "def text_split(extracted_data):\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size = 500, chunk_overlap=20)\n",
+    "    text_chunks = text_splitter.split_documents(extracted_data)\n",
+    "    \n",
+    "    return text_chunks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of chunks 5779\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_chunks = text_split(extracted_data)\n",
+    "print('Length of chunks',len(text_chunks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_hugging_face_embeddings():\n",
+    "    embeddings = HuggingFaceEmbeddings(model_name='sentence-transformers/all-MiniLM-L6-v2')\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Administrator\\anaconda3\\envs\\mchatbot\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 0.3.0. An updated version of the class exists in the langchain-huggingface package and should be used instead. To use it run `pip install -U langchain-huggingface` and import as `from langchain_huggingface import HuggingFaceEmbeddings`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings = download_hugging_face_embeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HuggingFaceEmbeddings(client=SentenceTransformer(\n",
+       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False})\n",
+       "  (2): Normalize()\n",
+       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={}, multi_process=False, show_progress=False)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of the query is 384\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_result = embeddings.embed_query('Hello World')\n",
+    "print('length of the query is',len(query_result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initializing the Pinecone\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "from pinecone import Pinecone, ServerlessSpec\n",
+    "\n",
+    "pc = Pinecone(\n",
+    "        api_key=os.environ.get(\"PINECONE_API_KEY\")\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Pinecone index\n",
+    "if 'medical' not in pc.list_indexes().names():\n",
+    "    pc.create_index(\n",
+    "        name='medical',\n",
+    "        dimension=384,\n",
+    "        metric='cosine',\n",
+    "        spec=ServerlessSpec(\n",
+    "            region='us-east-1'\n",
+    "        )\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to the index\n",
+    "# Connect to the index\n",
+    "index_host =\"https://medical-5h4j6t4.svc.aped-4627-b74a.pinecone.io\"\n",
+    "index = pc.Index(\"medical\", host=index_host)\n",
+    "# Prepare vectors for upsert\n",
+    "vectors = []\n",
+    "for idx, embedding in enumerate(embeddings):\n",
+    "    vectors.append({\"id\": str(idx), \"values\": embedding})\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': '0',\n",
+       "  'values': ('client', SentenceTransformer(\n",
+       "     (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+       "     (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False})\n",
+       "     (2): Normalize()\n",
+       "   ))},\n",
+       " {'id': '1',\n",
+       "  'values': ('model_name', 'sentence-transformers/all-MiniLM-L6-v2')},\n",
+       " {'id': '2', 'values': ('cache_folder', None)},\n",
+       " {'id': '3', 'values': ('model_kwargs', {})},\n",
+       " {'id': '4', 'values': ('encode_kwargs', {})},\n",
+       " {'id': '5', 'values': ('multi_process', False)},\n",
+       " {'id': '6', 'values': ('show_progress', False)}]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HuggingFaceEmbeddings(client=SentenceTransformer(\n",
+       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False})\n",
+       "  (2): Normalize()\n",
+       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={}, multi_process=False, show_progress=False)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def upload_embeddings_to_pinecone(embeddings, index):\n",
+    "    vectors = []\n",
+    "    for idx, embedding in enumerate(embeddings):\n",
+    "        try:\n",
+    "            embedding_values = list(map(float, embedding))  # Convert each element to float\n",
+    "            vectors.append({\"id\": str(idx), \"values\": embedding_values})\n",
+    "        except ValueError:\n",
+    "            print(f\"Skipping embedding {idx} due to non-numeric values: {embedding}\")\n",
+    "\n",
+    "    batch_size = 100\n",
+    "    for i in range(0, len(vectors), batch_size):\n",
+    "        batch = vectors[i: i + batch_size]\n",
+    "        index.upsert(vectors=batch)\n",
+    "\n",
+    "    print(\"Data uploaded successfully to Pinecone!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping embedding 0 due to non-numeric values: ('client', SentenceTransformer(\n",
+      "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+      "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False})\n",
+      "  (2): Normalize()\n",
+      "))\n",
+      "Skipping embedding 1 due to non-numeric values: ('model_name', 'sentence-transformers/all-MiniLM-L6-v2')\n",
+      "Skipping embedding 2 due to non-numeric values: ('cache_folder', None)\n",
+      "Skipping embedding 3 due to non-numeric values: ('model_kwargs', {})\n",
+      "Skipping embedding 4 due to non-numeric values: ('encode_kwargs', {})\n",
+      "Skipping embedding 5 due to non-numeric values: ('multi_process', False)\n",
+      "Skipping embedding 6 due to non-numeric values: ('show_progress', False)\n",
+      "Data uploaded successfully to Pinecone!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Upload embeddings to Pinecone\n",
+    "upload_embeddings_to_pinecone(embeddings, index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, t in zip(range(len(text_chunks)), text_chunks):\n",
+    "   query_result = embeddings.embed_query(t.page_content)\n",
+    "   index.upsert(\n",
+    "   vectors=[\n",
+    "        {\n",
+    "            \"id\": str(i),  # Convert i to a string\n",
+    "            \"values\": query_result, \n",
+    "            \"metadata\": {\"text\":str(text_chunks[i].page_content)} # meta data as dic\n",
+    "        }\n",
+    "    ],\n",
+    "    namespace=\"real\" \n",
+    ")"
    ]
   },
   {
